[gd_scene load_steps=8 format=3 uid="uid://cf8igsvb03dmh"]

[ext_resource type="Texture2D" uid="uid://ccbyxbw660jjc" path="res://assets/tiles/platformPack_tile002.png" id="2_js7pq"]
[ext_resource type="PackedScene" uid="uid://cwwn6gbremmsd" path="res://Player.tscn" id="3"]
[ext_resource type="Texture2D" uid="uid://bfpkhbeblsbcq" path="res://assets/Desain tanpa judul.png" id="5_eu7l1"]
[ext_resource type="PackedScene" uid="uid://bxyeodoo6cdge" path="res://Enemy.tscn" id="5_p1v5b"]
[ext_resource type="Script" uid="uid://djpuruu4w2e68" path="res://World.gd" id="6"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_js7pq"]
texture = ExtResource("2_js7pq")
texture_region_size = Vector2i(64, 64)
0:0/next_alternative_id = 2
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[sub_resource type="TileSet" id="TileSet_p1v5b"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 0
sources/1 = SubResource("TileSetAtlasSource_js7pq")

[node name="Node2D" type="Node2D"]
script = ExtResource("6")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_p1v5b")
rendering_quadrant_size = 64
collision_animatable = true
format = 2
layer_0/tile_data = PackedInt32Array(2424833, 65536, 3, 2490369, 65536, 0, 2555905, 65536, 1, 2621441, 65536, 2, 2424834, 131072, 3, 2490370, 131072, 0, 2555906, 131072, 1, 2621442, 131072, 2, 2424835, 196608, 3, 2490371, 196608, 0, 2555907, 196608, 1, 2621443, 196608, 2, 2424836, 0, 3, 2490372, 0, 0, 2555908, 0, 1, 2621444, 0, 2, 1966080, 0, 0, 2031616, 0, 1, 2097152, 0, 2, 2162688, 0, 3, 1966081, 65536, 0, 2031617, 65536, 1, 2097153, 65536, 2, 2162689, 65536, 3, 1966082, 131072, 0, 2031618, 131072, 1, 2097154, 131072, 2, 2162690, 131072, 3, 1966083, 196608, 0, 2031619, 196608, 1, 2097155, 196608, 2, 2162691, 196608, 3, 1966084, 0, 0, 2031620, 0, 1, 2097156, 0, 2, 2162692, 0, 3, 1966085, 65536, 0, 2031621, 65536, 1, 2097157, 65536, 2, 2162693, 65536, 3, 1966086, 131072, 0, 2031622, 131072, 1, 2097158, 131072, 2, 2162694, 131072, 3, 1966087, 196608, 0, 2031623, 196608, 1, 2097159, 196608, 2, 2162695, 196608, 3, 1966088, 0, 0, 2031624, 0, 1, 2097160, 0, 2, 2162696, 0, 3, 1966089, 65536, 0, 2031625, 65536, 1, 2097161, 65536, 2, 2162697, 65536, 3, 1966090, 131072, 0, 2031626, 131072, 1, 2097162, 131072, 2, 2162698, 131072, 3, 1966091, 196608, 0, 2031627, 196608, 1, 2097163, 196608, 2, 2162699, 196608, 3, 1966092, 0, 0, 2031628, 0, 1, 2097164, 0, 2, 2162700, 0, 3, 1966093, 65536, 0, 2031629, 65536, 1, 2097165, 65536, 2, 2162701, 65536, 3, 1966094, 131072, 0, 2031630, 131072, 1, 2097166, 131072, 2, 2162702, 131072, 3, 1966095, 196608, 0, 2031631, 196608, 1, 2097167, 196608, 2, 2162703, 196608, 3, 1966096, 0, 0, 2031632, 0, 1, 2097168, 0, 2, 2162704, 0, 3, 1966097, 65536, 0, 2031633, 65536, 1, 2097169, 65536, 2, 2162705, 65536, 3, 1966098, 131072, 0, 2031634, 131072, 1, 2097170, 131072, 2, 2162706, 131072, 3, 1966099, 196608, 0, 2031635, 196608, 1, 2097171, 196608, 2, 2162707, 196608, 3, 1966100, 0, 0, 2031636, 0, 1, 2097172, 0, 2, 2162708, 0, 3, 1966101, 65536, 0, 2031637, 65536, 1, 2097173, 65536, 2, 2162709, 65536, 3, 1966102, 131072, 0, 2031638, 131072, 1, 2097174, 131072, 2, 2162710, 131072, 3, 1966103, 196608, 0, 2031639, 196608, 1, 2097175, 196608, 2, 2162711, 196608, 3, 1966104, 0, 0, 2031640, 0, 1, 2097176, 0, 2, 2162712, 0, 3, 1966105, 65536, 0, 2031641, 65536, 1, 2097177, 65536, 2, 2162713, 65536, 3, 1966106, 131072, 0, 2031642, 131072, 1, 2097178, 131072, 2, 2162714, 131072, 3, 1966107, 196608, 0, 2031643, 196608, 1, 2097179, 196608, 2, 2162715, 196608, 3, 1966108, 0, 0, 2031644, 0, 1, 2097180, 0, 2, 2162716, 0, 3, 1966109, 65536, 0, 2031645, 65536, 1, 2097181, 65536, 2, 2162717, 65536, 3, 1966110, 131072, 0, 2031646, 131072, 1, 2097182, 131072, 2, 2162718, 131072, 3, 1966111, 196608, 0, 2031647, 196608, 1, 2097183, 196608, 2, 2162719, 196608, 3, 1966112, 0, 0, 2031648, 0, 1, 2097184, 0, 2, 2162720, 0, 3, 1966113, 65536, 0, 2031649, 65536, 1, 2097185, 65536, 2, 2162721, 65536, 3, 1966114, 131072, 0, 2031650, 131072, 1, 2097186, 131072, 2, 2162722, 131072, 3, 1966115, 196608, 0, 2031651, 196608, 1, 2097187, 196608, 2, 2162723, 196608, 3, 1966116, 0, 0, 2031652, 0, 1, 2097188, 0, 2, 2162724, 0, 3, 1966117, 65536, 0, 2031653, 65536, 1, 2097189, 65536, 2, 2162725, 65536, 3, 1966118, 131072, 0, 2031654, 131072, 1, 2097190, 131072, 2, 2162726, 131072, 3, 1966119, 196608, 0, 2031655, 196608, 1, 2097191, 196608, 2, 2162727, 196608, 3, 2031656, 0, 1, 2097192, 0, 2, 2162728, 0, 3, 1966121, 65536, 0, 2031657, 65536, 1, 2097193, 65536, 2, 2162729, 65536, 3, 1966122, 131072, 0, 2031658, 131072, 1, 2097194, 131072, 2, 2162730, 131072, 3, 1966123, 196608, 0, 2031659, 196608, 1, 2097195, 196608, 2, 2162731, 196608, 3, 1966128, 0, 0, 2031664, 0, 1, 2097200, 0, 2, 2162736, 0, 3, 1966129, 65536, 0, 2031665, 65536, 1, 2097201, 65536, 2, 2162737, 65536, 3, 1966130, 131072, 0, 2031666, 131072, 1, 2097202, 131072, 2, 2162738, 131072, 3, 1966131, 196608, 0, 2031667, 196608, 1, 2097203, 196608, 2, 2162739, 196608, 3, 1966124, 0, 0, 2031660, 0, 1, 2097196, 0, 2, 2162732, 0, 3, 1966125, 65536, 0, 2031661, 65536, 1, 2097197, 65536, 2, 2162733, 65536, 3, 1966126, 131072, 0, 2031662, 131072, 1, 2097198, 131072, 2, 2162734, 131072, 3, 1966127, 196608, 0, 2031663, 196608, 1, 2097199, 196608, 2, 2162735, 196608, 3, 1966132, 0, 0, 2031668, 0, 1, 2097204, 0, 2, 2162740, 0, 3, 1966133, 65536, 0, 2031669, 65536, 1, 2097205, 65536, 2, 2162741, 65536, 3, 1966134, 131072, 0, 2031670, 131072, 1, 2097206, 131072, 2, 2162742, 131072, 3, 1966135, 196608, 0, 2031671, 196608, 1, 2097207, 196608, 2, 2162743, 196608, 3, 1966136, 0, 0, 2031672, 0, 1, 2097208, 0, 2, 2162744, 0, 3, 1966137, 65536, 0, 2031673, 65536, 1, 2097209, 65536, 2, 2162745, 65536, 3, 1966138, 131072, 0, 2031674, 131072, 1, 2097210, 131072, 2, 2162746, 131072, 3, 1966139, 196608, 0, 2031675, 196608, 1, 2097211, 196608, 2, 2162747, 196608, 3, 1966140, 0, 0, 2031676, 0, 1, 2097212, 0, 2, 2162748, 0, 3, 1966141, 65536, 0, 2031677, 65536, 1, 2097213, 65536, 2, 2162749, 65536, 3, 1966142, 131072, 0, 2031678, 131072, 1, 2097214, 131072, 2, 2162750, 131072, 3, 1966143, 196608, 0, 2031679, 196608, 1, 2097215, 196608, 2, 2162751, 196608, 3, 2228280, 0, 0, 2293816, 0, 1, 2359352, 0, 2, 2424888, 0, 3, 2228281, 65536, 0, 2293817, 65536, 1, 2359353, 65536, 2, 2424889, 65536, 3, 2228282, 131072, 0, 2293818, 131072, 1, 2359354, 131072, 2, 2424890, 131072, 3, 2228283, 196608, 0, 2293819, 196608, 1, 2359355, 196608, 2, 2424891, 196608, 3, 2490424, 0, 0, 2555960, 0, 1, 2621496, 0, 2, 2687032, 0, 3, 2490425, 65536, 0, 2555961, 65536, 1, 2621497, 65536, 2, 2687033, 65536, 3, 2490426, 131072, 0, 2555962, 131072, 1, 2621498, 131072, 2, 2687034, 131072, 3, 2490427, 196608, 0, 2555963, 196608, 1, 2621499, 196608, 2, 2687035, 196608, 3, 2228284, 0, 0, 2293820, 0, 1, 2359356, 0, 2, 2424892, 0, 3, 2228285, 65536, 0, 2293821, 65536, 1, 2359357, 65536, 2, 2424893, 65536, 3, 2228286, 131072, 0, 2293822, 131072, 1, 2359358, 131072, 2, 2424894, 131072, 3, 2228287, 196608, 0, 2293823, 196608, 1, 2359359, 196608, 2, 2424895, 196608, 3, 2228276, 0, 0, 2293812, 0, 1, 2359348, 0, 2, 2424884, 0, 3, 2228277, 65536, 0, 2293813, 65536, 1, 2359349, 65536, 2, 2424885, 65536, 3, 2228278, 131072, 0, 2293814, 131072, 1, 2359350, 131072, 2, 2424886, 131072, 3, 2228279, 196608, 0, 2293815, 196608, 1, 2359351, 196608, 2, 2424887, 196608, 3, 2228252, 0, 0, 2293788, 0, 1, 2359324, 0, 2, 2424860, 0, 3, 2228253, 65536, 0, 2293789, 65536, 1, 2359325, 65536, 2, 2424861, 65536, 3, 2228254, 131072, 0, 2293790, 131072, 1, 2359326, 131072, 2, 2424862, 131072, 3, 2228255, 196608, 0, 2293791, 196608, 1, 2359327, 196608, 2, 2424863, 196608, 3, 2228248, 0, 0, 2293784, 0, 1, 2359320, 0, 2, 2424856, 0, 3, 2228249, 65536, 0, 2293785, 65536, 1, 2359321, 65536, 2, 2424857, 65536, 3, 2228250, 131072, 0, 2293786, 131072, 1, 2359322, 131072, 2, 2424858, 131072, 3, 2228251, 196608, 0, 2293787, 196608, 1, 2359323, 196608, 2, 2424859, 196608, 3, 2228244, 0, 0, 2293780, 0, 1, 2359316, 0, 2, 2424852, 0, 3, 2228245, 65536, 0, 2293781, 65536, 1, 2359317, 65536, 2, 2424853, 65536, 3, 2228246, 131072, 0, 2293782, 131072, 1, 2359318, 131072, 2, 2424854, 131072, 3, 2228247, 196608, 0, 2293783, 196608, 1, 2359319, 196608, 2, 2424855, 196608, 3, 2228232, 0, 0, 2293768, 0, 1, 2359304, 0, 2, 2424840, 0, 3, 2228233, 65536, 0, 2293769, 65536, 1, 2359305, 65536, 2, 2424841, 65536, 3, 2228234, 131072, 0, 2293770, 131072, 1, 2359306, 131072, 2, 2424842, 131072, 3, 2228235, 196608, 0, 2293771, 196608, 1, 2359307, 196608, 2, 2424843, 196608, 3, 2228236, 0, 0, 2293772, 0, 1, 2359308, 0, 2, 2424844, 0, 3, 2228237, 65536, 0, 2293773, 65536, 1, 2359309, 65536, 2, 2424845, 65536, 3, 2228238, 131072, 0, 2293774, 131072, 1, 2359310, 131072, 2, 2424846, 131072, 3, 2228239, 196608, 0, 2293775, 196608, 1, 2359311, 196608, 2, 2424847, 196608, 3, 2228240, 0, 0, 2293776, 0, 1, 2359312, 0, 2, 2424848, 0, 3, 2228241, 65536, 0, 2293777, 65536, 1, 2359313, 65536, 2, 2424849, 65536, 3, 2228242, 131072, 0, 2293778, 131072, 1, 2359314, 131072, 2, 2424850, 131072, 3, 2228243, 196608, 0, 2293779, 196608, 1, 2359315, 196608, 2, 2424851, 196608, 3, 2228228, 0, 0, 2293764, 0, 1, 2359300, 0, 2, 2228229, 65536, 0, 2293765, 65536, 1, 2359301, 65536, 2, 2424837, 65536, 3, 2228230, 131072, 0, 2293766, 131072, 1, 2359302, 131072, 2, 2424838, 131072, 3, 2228231, 196608, 0, 2293767, 196608, 1, 2359303, 196608, 2, 2424839, 196608, 3, 2228224, 0, 0, 2293760, 0, 1, 2359296, 0, 2, 2424832, 0, 3, 2228225, 65536, 0, 2293761, 65536, 1, 2359297, 65536, 2, 2228226, 131072, 0, 2293762, 131072, 1, 2359298, 131072, 2, 2228227, 196608, 0, 2293763, 196608, 1, 2359299, 196608, 2, 2228268, 0, 0, 2293804, 0, 1, 2359340, 0, 2, 2424876, 0, 3, 2228269, 65536, 0, 2293805, 65536, 1, 2359341, 65536, 2, 2424877, 65536, 3, 2228270, 131072, 0, 2293806, 131072, 1, 2359342, 131072, 2, 2424878, 131072, 3, 2228271, 196608, 0, 2293807, 196608, 1, 2359343, 196608, 2, 2424879, 196608, 3, 2228264, 0, 0, 2293800, 0, 1, 2359336, 0, 2, 2424872, 0, 3, 2228265, 65536, 0, 2293801, 65536, 1, 2359337, 65536, 2, 2424873, 65536, 3, 2228266, 131072, 0, 2293802, 131072, 1, 2359338, 131072, 2, 2424874, 131072, 3, 2228267, 196608, 0, 2293803, 196608, 1, 2359339, 196608, 2, 2424875, 196608, 3, 2228260, 0, 0, 2293796, 0, 1, 2359332, 0, 2, 2424868, 0, 3, 2228261, 65536, 0, 2293797, 65536, 1, 2359333, 65536, 2, 2424869, 65536, 3, 2228262, 131072, 0, 2293798, 131072, 1, 2359334, 131072, 2, 2424870, 131072, 3, 2228263, 196608, 0, 2293799, 196608, 1, 2359335, 196608, 2, 2424871, 196608, 3, 2228256, 0, 0, 2293792, 0, 1, 2359328, 0, 2, 2424864, 0, 3, 2228257, 65536, 0, 2293793, 65536, 1, 2359329, 65536, 2, 2424865, 65536, 3, 2228258, 131072, 0, 2293794, 131072, 1, 2359330, 131072, 2, 2424866, 131072, 3, 2228259, 196608, 0, 2293795, 196608, 1, 2359331, 196608, 2, 2424867, 196608, 3, 2490404, 0, 0, 2555940, 0, 1, 2621476, 0, 2, 2687012, 0, 3, 2490405, 65536, 0, 2555941, 65536, 1, 2621477, 65536, 2, 2687013, 65536, 3, 2490406, 131072, 0, 2555942, 131072, 1, 2621478, 131072, 2, 2687014, 131072, 3, 2490407, 196608, 0, 2555943, 196608, 1, 2621479, 196608, 2, 2687015, 196608, 3, 2490400, 0, 0, 2555936, 0, 1, 2621472, 0, 2, 2687008, 0, 3, 2490401, 65536, 0, 2555937, 65536, 1, 2621473, 65536, 2, 2687009, 65536, 3, 2490402, 131072, 0, 2555938, 131072, 1, 2621474, 131072, 2, 2687010, 131072, 3, 2490403, 196608, 0, 2555939, 196608, 1, 2621475, 196608, 2, 2687011, 196608, 3, 2490396, 0, 0, 2555932, 0, 1, 2621468, 0, 2, 2687004, 0, 3, 2490397, 65536, 0, 2555933, 65536, 1, 2621469, 65536, 2, 2687005, 65536, 3, 2490398, 131072, 0, 2555934, 131072, 1, 2621470, 131072, 2, 2687006, 131072, 3, 2490399, 196608, 0, 2555935, 196608, 1, 2621471, 196608, 2, 2687007, 196608, 3, 2490392, 0, 0, 2555928, 0, 1, 2621464, 0, 2, 2687000, 0, 3, 2490393, 65536, 0, 2555929, 65536, 1, 2621465, 65536, 2, 2687001, 65536, 3, 2490394, 131072, 0, 2555930, 131072, 1, 2621466, 131072, 2, 2687002, 131072, 3, 2490395, 196608, 0, 2555931, 196608, 1, 2621467, 196608, 2, 2687003, 196608, 3, 2490388, 0, 0, 2555924, 0, 1, 2621460, 0, 2, 2686996, 0, 3, 2490389, 65536, 0, 2555925, 65536, 1, 2621461, 65536, 2, 2686997, 65536, 3, 2490390, 131072, 0, 2555926, 131072, 1, 2621462, 131072, 2, 2686998, 131072, 3, 2490391, 196608, 0, 2555927, 196608, 1, 2621463, 196608, 2, 2686999, 196608, 3, 2490384, 0, 0, 2555920, 0, 1, 2621456, 0, 2, 2686992, 0, 3, 2490385, 65536, 0, 2555921, 65536, 1, 2621457, 65536, 2, 2686993, 65536, 3, 2490386, 131072, 0, 2555922, 131072, 1, 2621458, 131072, 2, 2686994, 131072, 3, 2490387, 196608, 0, 2555923, 196608, 1, 2621459, 196608, 2, 2686995, 196608, 3, 2490380, 0, 0, 2555916, 0, 1, 2621452, 0, 2, 2686988, 0, 3, 2490381, 65536, 0, 2555917, 65536, 1, 2621453, 65536, 2, 2686989, 65536, 3, 2490382, 131072, 0, 2555918, 131072, 1, 2621454, 131072, 2, 2686990, 131072, 3, 2490383, 196608, 0, 2555919, 196608, 1, 2621455, 196608, 2, 2686991, 196608, 3, 2490376, 0, 0, 2555912, 0, 1, 2621448, 0, 2, 2686984, 0, 3, 2490377, 65536, 0, 2555913, 65536, 1, 2621449, 65536, 2, 2686985, 65536, 3, 2490378, 131072, 0, 2555914, 131072, 1, 2621450, 131072, 2, 2686986, 131072, 3, 2490379, 196608, 0, 2555915, 196608, 1, 2621451, 196608, 2, 2686987, 196608, 3, 2686980, 0, 3, 2490373, 65536, 0, 2555909, 65536, 1, 2621445, 65536, 2, 2686981, 65536, 3, 2490374, 131072, 0, 2555910, 131072, 1, 2621446, 131072, 2, 2686982, 131072, 3, 2490375, 196608, 0, 2555911, 196608, 1, 2621447, 196608, 2, 2686983, 196608, 3, 2490368, 0, 0, 2555904, 0, 1, 2621440, 0, 2, 2686976, 0, 3, 2686977, 65536, 3, 2686978, 131072, 3, 2686979, 196608, 3, 2490412, 0, 0, 2555948, 0, 1, 2621484, 0, 2, 2687020, 0, 3, 2490413, 65536, 0, 2555949, 65536, 1, 2621485, 65536, 2, 2687021, 65536, 3, 2490414, 131072, 0, 2555950, 131072, 1, 2621486, 131072, 2, 2687022, 131072, 3, 2490415, 196608, 0, 2555951, 196608, 1, 2621487, 196608, 2, 2687023, 196608, 3, 2490408, 0, 0, 2555944, 0, 1, 2621480, 0, 2, 2687016, 0, 3, 2490409, 65536, 0, 2555945, 65536, 1, 2621481, 65536, 2, 2687017, 65536, 3, 2490410, 131072, 0, 2555946, 131072, 1, 2621482, 131072, 2, 2687018, 131072, 3, 2490411, 196608, 0, 2555947, 196608, 1, 2621483, 196608, 2, 2687019, 196608, 3, 2490416, 0, 0, 2555952, 0, 1, 2621488, 0, 2, 2687024, 0, 3, 2490417, 65536, 0, 2555953, 65536, 1, 2621489, 65536, 2, 2687025, 65536, 3, 2490418, 131072, 0, 2555954, 131072, 1, 2621490, 131072, 2, 2687026, 131072, 3, 2490419, 196608, 0, 2555955, 196608, 1, 2621491, 196608, 2, 2687027, 196608, 3, 2490420, 0, 0, 2555956, 0, 1, 2621492, 0, 2, 2687028, 0, 3, 2490421, 65536, 0, 2555957, 65536, 1, 2621493, 65536, 2, 2687029, 65536, 3, 2490422, 131072, 0, 2555958, 131072, 1, 2621494, 131072, 2, 2687030, 131072, 3, 2490423, 196608, 0, 2555959, 196608, 1, 2621495, 196608, 2, 2687031, 196608, 3, 2228272, 0, 0, 2293808, 0, 1, 2359344, 0, 2, 2424880, 0, 3, 2228273, 65536, 0, 2293809, 65536, 1, 2359345, 65536, 2, 2424881, 65536, 3, 2228274, 131072, 0, 2293810, 131072, 1, 2359346, 131072, 2, 2424882, 131072, 3, 2228275, 196608, 0, 2293811, 196608, 1, 2359347, 196608, 2, 2424883, 196608, 3, 2490428, 0, 0, 2555964, 0, 1, 2621500, 0, 2, 2687036, 0, 3, 2490429, 65536, 0, 2555965, 65536, 1, 2621501, 65536, 2, 2687037, 65536, 3, 2490430, 131072, 0, 2555966, 131072, 1, 2621502, 131072, 2, 2687038, 131072, 3, 2490431, 196608, 0, 2555967, 196608, 1, 2621503, 196608, 2, 2687039, 196608, 3, 2752568, 0, 0, 2818104, 0, 1, 2883640, 0, 2, 2949176, 0, 3, 2752569, 65536, 0, 2818105, 65536, 1, 2883641, 65536, 2, 2949177, 65536, 3, 2752570, 131072, 0, 2818106, 131072, 1, 2883642, 131072, 2, 2949178, 131072, 3, 2752571, 196608, 0, 2818107, 196608, 1, 2883643, 196608, 2, 2949179, 196608, 3, 2752572, 0, 0, 2818108, 0, 1, 2883644, 0, 2, 2949180, 0, 3, 2752573, 65536, 0, 2818109, 65536, 1, 2883645, 65536, 2, 2949181, 65536, 3, 2752574, 131072, 0, 2818110, 131072, 1, 2883646, 131072, 2, 2949182, 131072, 3, 2752575, 196608, 0, 2818111, 196608, 1, 2883647, 196608, 2, 2949183, 196608, 3, 2752564, 0, 0, 2818100, 0, 1, 2883636, 0, 2, 2949172, 0, 3, 2752565, 65536, 0, 2818101, 65536, 1, 2883637, 65536, 2, 2949173, 65536, 3, 2752566, 131072, 0, 2818102, 131072, 1, 2883638, 131072, 2, 2949174, 131072, 3, 2752567, 196608, 0, 2818103, 196608, 1, 2883639, 196608, 2, 2949175, 196608, 3, 2752560, 0, 0, 2818096, 0, 1, 2883632, 0, 2, 2949168, 0, 3, 2752561, 65536, 0, 2818097, 65536, 1, 2883633, 65536, 2, 2949169, 65536, 3, 2752562, 131072, 0, 2818098, 131072, 1, 2883634, 131072, 2, 2949170, 131072, 3, 2752563, 196608, 0, 2818099, 196608, 1, 2883635, 196608, 2, 2949171, 196608, 3, 2752548, 0, 0, 2818084, 0, 1, 2883620, 0, 2, 2949156, 0, 3, 2752549, 65536, 0, 2818085, 65536, 1, 2883621, 65536, 2, 2949157, 65536, 3, 2752550, 131072, 0, 2818086, 131072, 1, 2883622, 131072, 2, 2949158, 131072, 3, 2752551, 196608, 0, 2818087, 196608, 1, 2883623, 196608, 2, 2949159, 196608, 3, 2752544, 0, 0, 2818080, 0, 1, 2883616, 0, 2, 2949152, 0, 3, 2752545, 65536, 0, 2818081, 65536, 1, 2883617, 65536, 2, 2949153, 65536, 3, 2752546, 131072, 0, 2818082, 131072, 1, 2883618, 131072, 2, 2949154, 131072, 3, 2752547, 196608, 0, 2818083, 196608, 1, 2883619, 196608, 2, 2949155, 196608, 3, 2752540, 0, 0, 2818076, 0, 1, 2883612, 0, 2, 2949148, 0, 3, 2752541, 65536, 0, 2818077, 65536, 1, 2883613, 65536, 2, 2949149, 65536, 3, 2752542, 131072, 0, 2818078, 131072, 1, 2883614, 131072, 2, 2949150, 131072, 3, 2752543, 196608, 0, 2818079, 196608, 1, 2883615, 196608, 2, 2949151, 196608, 3, 2752536, 0, 0, 2818072, 0, 1, 2883608, 0, 2, 2949144, 0, 3, 2752537, 65536, 0, 2818073, 65536, 1, 2883609, 65536, 2, 2949145, 65536, 3, 2752538, 131072, 0, 2818074, 131072, 1, 2883610, 131072, 2, 2949146, 131072, 3, 2752539, 196608, 0, 2818075, 196608, 1, 2883611, 196608, 2, 2949147, 196608, 3, 2752552, 0, 0, 2818088, 0, 1, 2883624, 0, 2, 2949160, 0, 3, 2752553, 65536, 0, 2818089, 65536, 1, 2883625, 65536, 2, 2949161, 65536, 3, 2752554, 131072, 0, 2818090, 131072, 1, 2883626, 131072, 2, 2949162, 131072, 3, 2752555, 196608, 0, 2818091, 196608, 1, 2883627, 196608, 2, 2949163, 196608, 3, 2752556, 0, 0, 2818092, 0, 1, 2883628, 0, 2, 2949164, 0, 3, 2752557, 65536, 0, 2818093, 65536, 1, 2883629, 65536, 2, 2949165, 65536, 3, 2752558, 131072, 0, 2818094, 131072, 1, 2883630, 131072, 2, 2949166, 131072, 3, 2752559, 196608, 0, 2818095, 196608, 1, 2883631, 196608, 2, 2949167, 196608, 3, 2752532, 0, 0, 2818068, 0, 1, 2883604, 0, 2, 2949140, 0, 3, 2752533, 65536, 0, 2818069, 65536, 1, 2883605, 65536, 2, 2949141, 65536, 3, 2752534, 131072, 0, 2818070, 131072, 1, 2883606, 131072, 2, 2949142, 131072, 3, 2752535, 196608, 0, 2818071, 196608, 1, 2883607, 196608, 2, 2949143, 196608, 3, 2752528, 0, 0, 2818064, 0, 1, 2883600, 0, 2, 2949136, 0, 3, 2752529, 65536, 0, 2818065, 65536, 1, 2883601, 65536, 2, 2949137, 65536, 3, 2752530, 131072, 0, 2818066, 131072, 1, 2883602, 131072, 2, 2949138, 131072, 3, 2752531, 196608, 0, 2818067, 196608, 1, 2883603, 196608, 2, 2949139, 196608, 3, 2752524, 0, 0, 2818060, 0, 1, 2883596, 0, 2, 2949132, 0, 3, 2752525, 65536, 0, 2818061, 65536, 1, 2883597, 65536, 2, 2949133, 65536, 3, 2752526, 131072, 0, 2818062, 131072, 1, 2883598, 131072, 2, 2949134, 131072, 3, 2752527, 196608, 0, 2818063, 196608, 1, 2883599, 196608, 2, 2949135, 196608, 3, 2752520, 0, 0, 2818056, 0, 1, 2883592, 0, 2, 2949128, 0, 3, 2752521, 65536, 0, 2818057, 65536, 1, 2883593, 65536, 2, 2949129, 65536, 3, 2752522, 131072, 0, 2818058, 131072, 1, 2883594, 131072, 2, 2949130, 131072, 3, 2752523, 196608, 0, 2818059, 196608, 1, 2883595, 196608, 2, 2949131, 196608, 3, 2752516, 0, 0, 2818052, 0, 1, 2883588, 0, 2, 2949124, 0, 3, 2752517, 65536, 0, 2818053, 65536, 1, 2883589, 65536, 2, 2949125, 65536, 3, 2752518, 131072, 0, 2818054, 131072, 1, 2883590, 131072, 2, 2949126, 131072, 3, 2752519, 196608, 0, 2818055, 196608, 1, 2883591, 196608, 2, 2949127, 196608, 3, 2752512, 0, 0, 2818048, 0, 1, 2883584, 0, 2, 2949120, 0, 3, 2752513, 65536, 0, 2818049, 65536, 1, 2883585, 65536, 2, 2949121, 65536, 3, 2752514, 131072, 0, 2818050, 131072, 1, 2883586, 131072, 2, 2949122, 131072, 3, 2752515, 196608, 0, 2818051, 196608, 1, 2883587, 196608, 2, 2949123, 196608, 3, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 589825, 1, 0, 589824, 1, 0, 655360, 1, 0, 655361, 1, 0, 589826, 1, 0, 589827, 1, 0, 655362, 1, 0, 589828, 1, 0, 655363, 1, 0, 655364, 1, 0, 524293, 1, 0, 589829, 1, 0, 524294, 1, 0, 589830, 1, 0, 655365, 1, 0, 655366, 1, 0, 589831, 1, 0, 589832, 1, 0, 524296, 1, 0, 524295, 1, 0, 655367, 1, 0, 655368, 1, 0, 589833, 1, 0, 589834, 1, 0, 524298, 1, 0, 524297, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 589836, 1, 0, 589835, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 589837, 1, 0, 589838, 1, 0, 524302, 1, 0, 589839, 1, 0, 524303, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 524287, 1, 0, 458751, 1, 0, 589823, 1, 0, 655359, 1, 0, 524304, 1, 0, 524305, 1, 0, 589841, 1, 0, 655377, 1, 0, 655376, 1, 0, 589840, 1, 0)
layer_1/name = "Layer1"

[node name="Player" parent="." instance=ExtResource("3")]
position = Vector2(156, 354)

[node name="Background" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(576, 355.75)
scale = Vector2(0.75, 0.695801)
texture = ExtResource("5_eu7l1")

[node name="PointsLabel" type="RichTextLabel" parent="."]
offset_left = 911.0
offset_top = 9.0
offset_right = 1001.0
offset_bottom = 68.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "0"

[node name="StatusLabel" type="RichTextLabel" parent="."]
offset_left = 469.0
offset_top = 194.0
offset_right = 611.0
offset_bottom = 234.0

[node name="enemy" parent="." instance=ExtResource("5_p1v5b")]
position = Vector2(880, 376)

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(888, 512)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
